swiper size up on mobile & validar fixes

--- a/src/sass/components/_swiper.sass
+++ b/src/sass/components/_swiper.sass
@@ -168,5 +168,7 @@
           height: 40px
 
     .addui-slider-handle
-      top: 48px
+      top: 50px
+      width: 30px
+      height: 30px
 
